port to alpha 7 (removes vision support and some minor features)